2007-08-07  Andreas Kupries  <andreask@activestate.com>

	* fileutil.tcl (::fileutil::find): Command rewritten to use a
	* pkgIndex.tcl: portable iterative traversal core. Platform and
	* fileutil.man: Tcl version dependencies have been re-factored
	  into separate small commands. Should be more readable and
	  maintainable. Handling of circular symbolic links is now
	  portable (via a portable 'file normalize'). Order of paths in
	  the output changed, this however was never documented. Version
	  bumped to 1.13.2.

2007-08-03  Andreas Kupries  <andreask@activestate.com>

	* fileutil.test: Cleaned the setup/cleanup code up a bit.

	* filetype.test: Split the overly large file fileutil.test
	* fileutil.test: into a series of smaller test files for
	* find.test: specific commands.
	* inplace.test:
	* pathops.test:
	* strip.test:
	* test.test:

2007-08-01  Andreas Kupries  <andreask@activestate.com>

	* fileutil.test: Fixed problems with the tests for
	  fileutil::writeFile and companions. The regsub did not like
	  paths containing special characters like '+'. Replaced with a
	  'string map' construction.

	* multiop.tcl: Language tweak. Allow 'from', and 'into' (and aliases)
	* multiop.man: as qualifiers to 'the', i.e. allow specification after
	* multiop.test: 'the'. Updates documentation and examples too.

	* multi.tcl: Added documentation and testsuite for the multiop
	* multi.man: package built on top of the multiop objects. Bug
	* multi.test: fixes.
	* multiop.tcl:
	* multiop.man:
	* multiop.test:

2007-07-31  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* multiop.man: Wrote the actual documentation for the core
	* multiop.tcl: multi-file objects. Tweaked the syntax a bit.

2007-07-31  Andreas Kupries  <andreask@activestate.com>

	* multiop.tcl: New packages in module. Scatter/gather
	* multiop.test: operations, multi-file operations.
	* multiop.man: First user of 'wip' code.
	* multi.tcl:
	* pkgIndex.tcl:
